fix horizontal overflow

--- a/scss/custom-content/_bcn-hero-banner.scss
+++ b/scss/custom-content/_bcn-hero-banner.scss
@@ -39,7 +39,7 @@
   }
 
   &__content {
-    width: 700px;
+    max-width: 700px;
 
     h4 {
       font-weight: 400;
